--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <nav class="navbar">
             <div class="container">
                 <ul class="list">
-                    <li>
+                    <li class="active">
                         <a>Home</a>
 
                     </li>
                     <li>
-                        <a>Home</a>
+                        <a>About</a>
 
                     </li>
                     <li>
-                        <a>Home</a>
+                        <a>Services</a>
 
                     </li>
                 </ul>
@@ -36,15 +36,7 @@
                 </div>
                 <ul class="list">
                     <li>
-                        <a>Home</a>
-
-                    </li>
-                    <li>
-                        <a>Home</a>
-
-                    </li>
-                    <li>
-                        <a>Home</a>
+                        <a>Contact Us</a>
 
                     </li>
                 </ul>
@@ -491,19 +483,51 @@
 
         </section>
         <section class="sell pb-4">
-             <div class="row">
+             <div class="row"> 
                 <div class="sell-all">
                     <div class="sell-img">
                         <img src="./assets/images/Content.png">
                     </div>
                    
                     <div class="text-img">
-                          <h1>Hello</h1>
+                          <h4 class="h1 fw-bolder">Ready To Sell Your NTFS</h4>
+                          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui pariatur repellendus libero ab quidem aspernatur totam itaque!</p>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <button class="btn">sell right now</button>
+                        </div>
                     </div>
                 </div>
                 
              </div>
         </section>
+        <footer class="footer mt-5">
+            <div class="container">
+                <ul class="list">
+                    <li >
+                        <a>Terms&Conditions</a>
+
+                    </li>
+                    <li>
+                        <a>Privay</a>
+
+                    </li>
+                </ul>
+                <div class="logo">
+                    <img src="./assets/images/Flash.png">
+                    <img src="./assets/images/logo.png">
+                </div>
+                <ul class="list">
+                    <li>
+                        <a>Linces</a>
+
+                    </li>
+                </ul>
+            </div>
+            <hr>
+            <div class="d-flex align-items-center justify-content-center">
+                <h6 class="text-muted">&copy; copyRight ZEUS UI</h6>
+            </div>
+        </footer>
     </div>
 </body>
 
